# heck

./: CHANGELOG.md  LICENSE  README.md  heck.cabal
app/: Main.hs
examples/: Hello.hs
src/: Heck.hs
src/Heck/: CodeWriter.hs  Compiler.hs  Parsing.hs  Stuff.hs  Utils.hs
src/Heck/Compiler/: Functions.hs  Misc.hs  TypeCheck.hs  Types.hs
