cabal-version:      3.0
name:               heck
version:            0.1.0.0
synopsis:           A Haskell to JS transpiler
-- description:
homepage:           https://github.com/SarahIsWeird/heck
license:            MIT
license-file:       LICENSE
author:             Sarah Klocke
maintainer:         none
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Heck
            Heck.Parsing
            Heck.Compiler
            Heck.CodeWriter
    other-modules:
        Heck.Stuff
        Heck.Compiler.TypeCheck
        Heck.Compiler.Types
        Heck.Compiler.Functions
        Heck.Utils
    build-depends:
        base ^>= 4.17.2.1,
        text ^>= 2.1.2,
        haskell-src-exts ^>= 1.23.1,
        mtl ^>= 2.3.1,
        containers ^>= 0.7,
    hs-source-dirs:   src
    default-language: Haskell2010

executable heck
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>= 4.17.2.1,
        heck,
        haskell-src-exts ^>= 1.23.1,
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite heck-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        heck
